--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://nomanmujahid",
+  "homepage": "https://nomanmujahid.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,21 +13,32 @@
     "@types/jest": "^25.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-alert": "^7.0.6",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-thunk": "^2.1.0",
+    "axios": "^1.6.7",
     "blurhash": "^1.1.3",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "framer-motion": "3.10.6",
     "gh-pages": "^3.1.0",
     "react": "^18.2.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-blurhash": "^0.1.3",
     "react-dom": "^18.2.0",
     "react-icons": "^3.0.0",
     "react-palette": "^1.0.2",
+    "react-phone-number-input": "^3.3.9",
     "react-progressive-image": "^0.6.0",
-    "react-router-dom": "^5.2.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.30.1",
     "react-stack-grid": "^0.7.1",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "start": "^5.1.0",
     "typescript": "^3.9.5",
@@ -36,12 +47,14 @@
     "web-vitals": "^0.2.2"
   },
   "scripts": {
-    "start": "cross-env PORT=443 react-scripts start",
+    "start": "cross-env PORT=80 react-scripts start",
+    "server": "npm start --prefix Backend",
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
+    "build": "react-scripts build && serve -s build -l 80",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run server\" \"npm start\" "
   },
   "eslintConfig": {
     "extends": "react-app"
